# qtcowsay

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
dev/: pyapp_package.py
src/: __about__.py  __init__.py  qtcowsay.py
src/qtcowsay/: __init__.py  qtcowsay.py
