[project]
name = "qtcowsay"
version = "0.0.1"
description = "PyQt6 wrapper for qtcowsay."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "cowsay>=6.1",
    "PyQt6>=6.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
qtcowsay = "qtcowsay:run"

[project.urls]
Documentation = "https://github.com/trappitsch/qtcowsay#readme"
Issues = "https://github.com/trappitsch/qtcowsay/issues"
Source = "https://github.com/trappitsch/qtcowsay"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qtcowsay"]
